LU-20079 ldlm: fix kobject leak when client connect fails

When a Lustre client mount fails before obd_connect() completes
(e.g. because l_getsepol returns an error with send_sepol enabled),
cl_mgc_mgsexp is NULL.  lustre_stop_mgc() skips obd_disconnect()
in that case, so client_disconnect_export() is never called and
therefore ldlm_namespace_free_prior() is never invoked.
client_obd_cleanup() then calls ldlm_namespace_free_post() directly,
bypassing the lock cancellation and namespace list removal that
free_prior performs.

This leaves stale sysfs kobjects under
/sys/fs/lustre/ldlm/namespaces/ and /sys/fs/lustre/mgc/.  Every
subsequent mount attempt fails at ldlm_namespace_new() with -EEXIST
because kobject_init_and_add() finds the name already registered.
Only a reboot clears the state.

Root cause: client_connect_import() calls class_disconnect() on the
error path instead of client_disconnect_export(), skipping
ldlm_namespace_free_prior().  Fix by calling free_prior explicitly
in the error path of client_connect_import() after class_disconnect().
This sets LDLM_NS_STOPPING before client_obd_cleanup() runs free_post,
preventing the kobject leak and the pool recalc race on the namespace.

The fix covers all client OBD types (MGC, MDC, OSC) since they all
share client_connect_import() as their ->o_connect() method.

Verified on RHEL 9.7 and RHEL 10.1.

Signed-off-by: Hiroshi Nishida <hnishida@thelustrecollective.com>
Change-Id: Ic0ea7805b5c9aeadc6b6bcc2cca66961e743af98
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65083
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>